--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -4,10 +4,11 @@
 
 :root {
   /* ---- Primary Colors ---- */
-  --color-primary: #00A651;
-  --color-primary-dark: #008C45;
+  --color-primary: #007A3D;
+  --color-primary-dark: #006432;
   --color-primary-light: #E8F5E9;
-  --color-primary-hover: #009648;
+  --color-primary-hover: #006E37;
+  --color-primary-brand: #00A651;
 
   /* ---- Secondary Colors ---- */
   --color-secondary: #1B3A5C;
